# habit-tracking

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.hermes/plans/: 2026-07-15_habit-tracking-repo-plan.md
docs/: glossary.md
docs/adr/: 0001-record-architecture-decisions.md  0002-single-master-cron-job.md  0003-dynamic-scheduling.md  0004-yaml-habit-storage.md  0005-coaching-style-configuration.md  0006-git-worktrees-for-dogfooding.md
docs/research/: tiny-habits-research.md
skill/: SKILL.md  habits.yaml
skill/scripts/: habit_followup_check.py  setup.py
src/habitlib/: coach.py  daily_log.py  habits.py  models.py  scheduler.py
tests/: test_coach.py  test_daily_log.py  test_habits.py  test_models.py  test_scheduler.py
